--- a/WebApplication1/WebApplication1/Pages/Index.cshtml
+++ b/WebApplication1/WebApplication1/Pages/Index.cshtml
@@ -6,5 +6,5 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Hello World</p>
+    <p>Hello World from DT-2 at 14:11pm</p>
 </div>
